objects/ssot__PersonLifeEvent__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AddressId__c</fullName>
        <label>Address</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EventExpiryDate__c</fullName>
        <label>Event Expiry Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ExpirationDescription__c</fullName>
        <label>Expiration Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Person Life Event Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IndividualId__c</fullName>
        <label>Individual</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsEventExpired__c</fullName>
        <label>IsEventExpired</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsTentative__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Tentative</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__PersonLifeEventDateTime__c</fullName>
        <label>Person Life Event Date Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__PersonLifeEventType__c</fullName>
        <label>Person Life Event Type</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__isNextMajorLifeEvent__c</fullName>
        <label>Next Major Life Event</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761237635_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PersonLifeEvent_IndividualId_map_Ind_rel</label>
        <referenceTo>ssot__Individual__dlm</referenceTo>
        <relationshipLabel>PersonLifeEvent_IndividualId_map_Ind_rel</relationshipLabel>
        <relationshipName>rel_1697761237635_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1720291276560_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PersonLifeEvent_AddressId_map_Addres_rel</label>
        <referenceTo>ssot__Address__dlm</referenceTo>
        <relationshipLabel>PersonLifeEvent_AddressId_map_Addres_rel</relationshipLabel>
        <relationshipName>rel_1720291276560_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>